- added scn:keywords
git-svn-id: http://code.ana.unibe.ch/svn/ProgressReport2009@2 0c1e4840-3ef3-4fc2-8e6d-3da5d23d04b9

--- a/ProgresssReport2009.tex
+++ b/ProgresssReport2009.tex
@@ -67,20 +67,7 @@ Abstract
 
 \tableofcontents
 
-\section{first section}
-\lipsum[1]
-
-\section{second section}
-\lipsum[1]
-
-\section{third section}
-\lipsum[1]~\cite{Haberthuer2009}
-
-\bibliographystyle{unsrtnat}
-\bibliography{../../references}
-
-\appendix
-\section{appendix}
-\lipsum[1]
+\section{Overview}
+\lipsum
 
 \end{document}
