--- a/ProgresssReport2009.tex
+++ b/ProgresssReport2009.tex
@@ -56,39 +56,25 @@
 \begin{document}
 \maketitle
 
-\section{Overview}
-Again, this year the focus of my work is on on three-dimensional datasets obtained with high resolution synchrotron radiation based x-ray tomographic microscopy (SRXTM) at the beamline for TOmographic Microscopy and Coherent rAdiology experimenTs (TOMCAT) at the Swiss Light Source (SLS), Paul Scherrer Institute (PSI) in Villigen, Switzerland. During several beamtimes (details see section~\ref{sec:srxtm}) we recorded datasets of rat lung samples with different characteristics~\todo{Sophie erwähnen} and bone samples for a collaboration (see manuscript in preparation in section~\ref{sec:publications}). In the past year I have presented my work in multiple talks at both national and international conferences and have presented several posters about the topics I have been working on.
-
-The method for increasing the field of view of the TOMCAT beamline presented in the last progress report has been routinely applied for the imaging of rat lung samples by our group and is still pending the full implementation as a module into the beamline workflow at the SLS. A lot of my working time has been spent on the preparation of a manuscript for submission to the Journal of Synchrotron Radiation. This manuscript is in the very last editing stages.
-
-The extraction of the airway structure of the terminal airways has been refined. - Last year presented small acinus - now much bigger - other problems (not whole acinus in dataset $\rightarrow$ stacked wide field scan) - work/meeting with MeVis
-
-This year, 
-\begin{itemize}
-\item Multiple Talks (ATS, Forschungsdreieck Lunge, SLS Symposium)
-\item Three conferences
-\end{itemize}
-
-Multimodal Imaging: Proceeding published, Sebastien did Master Thesis on semi-automatic registration of different imaging modalities.
-
-Detection of Nanoparticles $>$ PhaseContrast
-
-WideFieldScanning
-\begin{itemize}
-\item Work on integration of WideFieldScanning into Beamline is pending. But it's not my problem anymore..
-\item big (huge if stacked) volumes are scanned routinely
-\item result: acinus is growing over development, that's why we've scanned stacked WFS
-\end{itemize}
-
-Structural Information
-\begin{itemize}
-\item Skeletonization is still problematic. Not in terms of Algorithm, but in terms of biological correctness. Wahlfachpraktikums-Studenten worked on this. Study with "real" stereological counting is planned (Wahlfach2010)
-\item Meeting with Fraunhofer MeVis in October for adaptation of algorithm from tubular to other structures. Scanco-Algorithm at PSI can NOT do anything > Work of Xris for paper
-\item extraction of information, we've seen that the acinus gets bigger over development > idea for next publication
-\end{itemize}
+\section{Introduction}
+Again, this year the focus of my work is on on three-dimensional datasets obtained with high resolution synchrotron radiation based x-ray tomographic microscopy (SRXTM) at the beamline for TOmographic Microscopy and Coherent rAdiology experimenTs (TOMCAT) at the Swiss Light Source (SLS), Paul Scherrer Institute (PSI) in Villigen, Switzerland. During several beamtimes (details see section~\ref{sec:srxtm}) we recorded datasets of rat and mice lung samples with different characteristics. In the past year I have presented my work in multiple talks at both national and international conferences and have presented several posters about the topics I have been working on.
 
 \section{SRXTM}\label{sec:srxtm}
-In total 6 Beamtimes @ PSI during 2009:
+During 6 regularly allotted beam times we obtained tomographc datasets of 170 samples, an increase in output compared to the output presented in the last progress report. In total we performed nearly 248 single scans; the difference between amount of tomographic datasets and single scans again arises through the use of the so called wide field scanning (see section~\ref{sec:wfs}), where multiple single scans are merged to obtain tomographic datasets with increased field of view at the same pixel-resolution as the single scans.
+
+Apart from 4 scans where we calibrated the tomographic beamline with electron microscopy grids or needle pins to thoroughly assess the beam and beamline characteristics, all tomographic datasets scanned have been of rat and mice lung samples. Slightly less than half of the tomographic scans (%
+% 15 Mariani
+% 12 Gold 
+% 36 Stockx
+% 13 Sophie
+76) have been scanned as part of four ongoing collaborations with external partners. The collaborations are:
+\begin{description}
+\item[The Lung Biology Center, Harvard Medical School] In the ongoing collaboration with Thomas Mariani we scanned 15 samples of PPAR Knockout mice. The tomographic datasets are used to study the alterations of the airway diameter in the mice. A paper of the findings is in preparation.
+\item[GSF-Institute of Inhalation Biology, Munich] Twelve samples of rat lungs with inhaled gold particles of \SI{200}{\nano\meter} and \SI{700}{\nano\meter} in size have been scanned. The tomographic datasets are used for a study on a bronchiopulmonary disease model as a preparation of an application of the  NFP 64 «Chancen und Risiken von Nanomaterialien». Generally, we use absorption-contrast tomography, but for these samples we also started to use phase-contrast tomography, which enables us to use unstained lung samples, which permits us to perform immunostaining and other biologically active test after obtaining tomographic datasets, something which is not possible with the uranyl-acetate-stained luns samples used for absorption-contrast tomography.
+\item[Medicine, Nursing and Health Sciences, Monash University] For a study to investigate the effects of different activated Protein C isoforms and hyperoxia exposure on the pulmonary vasculature and capillary density of rat lungs we scanned 36 samples. 
+\item[Lehrstuhl für Numerische Mechanik, TU Munich] As a provider of the data for a study on the mechanics of alveolar tissue under breathing and motion stress we scanned 13 samples.
+\end{description}
+
 \begin{table}[htp]
 \centering
 \scriptsize
@@ -111,21 +97,56 @@ Beamtime & Details & Total\\
 \label{tab:srxtm}
 \end{table}
 
-\subsection{Collaborations with Mariani}
-Alteration of Thickness Distribution > show DTF-data?
+\section{Wide field scanning}
+The method for increasing the field of view of the TOMCAT beamline presented in the last progress report has been routinely applied for the imaging of rat lung samples by our group and is still pending the full implementation as a module into the beamline workflow at the SLS. A lot of my working time has been spent on the preparation of a manuscript for submission to the Journal of Synchrotron Radiation, which explains the concepts and implementation of the socalled wide field x-ray tomographic microscopy (WF-SRXTM). This manuscript is to be submitted by now\todo{really?}. The technical side of the wide field scanning method has been covered, future work will focus on the answering of biological questions using this method. Using WF-SRXTM we can now visualize entire rat lung acini\footnote{The acinus is defined as the complex of alveolated airways distal to the terminal bronchiole \cite{Rodriguez1987}, in which the gas-exchange in the lung takes place.} , something which was not generally possible using classical SXTM, as can be seen in figure~\ref{fig:srxtm_vs_wfsrxtm}.
 
-\subsection{Gold Nanoparticles Kreyling}
-MBA, detection of particles in unstained samples
+\renewcommand{\imsize}{0.5\linewidth}
+\begin{figure}[htp]
+	\subfloat[Conventional SRXTM]{%
+		\pgfmathsetlength{\imagewidth}{\imsize}%
+		\pgfmathsetlength{\imagescale}{\imagewidth/1202}%
+		\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
+			\def\x{293} % scalebar-x at golden ratio of x=1202px
+			\def\y{612} % scalebar-y at 90% of height of y=680px
+			\node[anchor=north west,inner sep=0pt,outer sep=0pt] at (0,0)
+				{\includegraphics[width=\imagewidth]{img/R108C04C-overview-s2}};
+			\draw[|-|,thick] (\x,\y) -- (\x+116,\y) node [midway,above] {\SI{500}{\micro\meter}};
+		\end{tikzpicture}%
+		\label{subfig:srxtm}%
+		}%
+	\subfloat[Wide Field SRXTM with enhanced field of view]{%
+		\pgfmathsetlength{\imagewidth}{\imsize}%
+		\pgfmathsetlength{\imagescale}{\imagewidth/1202}%
+		\begin{tikzpicture}[x=\imagescale,y=-\imagescale]
+			\def\x{243} % scalebar-x at golden ratio of x=1202px
+			\def\y{612} % scalebar-y at 90% of height of y=680px
+			\node[anchor=north west,inner sep=0pt,outer sep=0pt] at (0,0)
+				{\includegraphics[width=\imagewidth]{img/R108C04C-overview-merge}};
+			\draw[|-|,thick] (\x,\y) -- (\x+232,\y) node [midway,above] {\SI{1}{\milli\meter}};
+		\end{tikzpicture}%
+		\label{subfig:wf-srxtm}%
+		}%
+	\label{fig:srxtm_vs_wfsrxtm}%
+	\caption{Comparison of conventiuonal SRXTM with WF-SRXTM of the same rat lung sample, obtained at postnatal day 4. Independent airway segments have been extracted using a region growing algorithm. With the conventional SRXTM (fig.~\ref{subfig:srxtm}) we see that the red airway segment is not fully contained in the total field of view of approx.\,1.52$\times$1.52$\times$\SI{1.52}{\milli\meter}. The green airway segment is also only partially contained. Increasing the field of view to approx.\,3.7$\times$3.7$\times$\SI{1.52}{\milli\meter}  %881x2516x1024px
+(fig~\ref{subfig:wf-srxtm}) adds more distinguishable airway segments to the tomographic dataset. We now see that the green airway segment is fully contained in the volume and an additional, yellow marked volume becomes visible.
+}%
+\end{figure}
 
-\subsection{Sophie}
-Lung stretching
+One preliminary result found with the visualization of rat lung acini over the postnatal lung development (day 4, 10, 21, 36 and 60 after birth) is that the acinus grows more than expected and predicted up to now. Even if we Albeit we have increased the visible sample volume nine-fold, we are still not able to fully visualize an entire rat lung acinus for the later development days. We thus recently recorded so called stacked WF-SRXTM scans, which increase the field of view both horizontally and vertically and plan to use these datasets for the study of the postnatal development of the acinar size.
 
-\subsection{Wide Field Scanning}
+The integration of the developed workflow into a program accessible by all users of the TOMCAT beamline is still pending, but should be happening in the first half year of 2010. 
+
+\section{Multimodal Imaging}
+The manuscript attached to the last progress report has been published in the Journal of Physics~\cite{Haberthuer2009}. The initial workflow for multimodal imaging---the combination of the full, unconstricted three-dimensional information of SRXTM datasets with the ultrahigh resolution of transmission electron microscopy (TEM) images---which has been presented in the aforementioned manuscript has been perfected by a master student in our group during his six-month master thesis. We are now able to routinely register datasets from two differentimaging modalities. Two-dimensional ultrahigh resolution TEM slices without information on the exact location in the airway tree can now be matched with three-dimensional high-resolution SRXTM slices containing the unrestricted information on the exact location in the airway tree. This enables us to exaxtly study and visualize particle deposition locations both on a cellular level and on the level of the location in the airway tree. Partial support on this master thesis has been made by me.
+
+\section{Structural Information}
 \begin{itemize}
-\item Samples for testing hypothesis about growing acinus size. Routine-application at the beamline now (for us, implementation still pending)
-\item Several different scans of the same sample performed > simulation \& qualityplot
-\item Difference only in bigger diameters. Show DTF from paper? (might also be positioning error)
+\item Skeletonization is still problematic. Not in terms of Algorithm, but in terms of biological correctness. Wahlfachpraktikums-Studenten worked on this. Study with "real" stereological counting is planned (Wahlfach2010)
+\item Meeting with Fraunhofer MeVis in October for adaptation of algorithm from tubular to other structures. Scanco-Algorithm at PSI can NOT do anything > Work of Xris for paper
+\item extraction of information, we've seen that the acinus gets bigger over development > idea for next publication
 \end{itemize}
+
+The extraction of the airway structure of the terminal airways has been refined. - Last year presented small acinus - now much bigger - other problems (not whole acinus in dataset $\rightarrow$ stacked wide field scan) - work/meeting with MeVis
 
 For further analysis four regions of interest with a side length of 256 pixels (at \SI{1.48}{\micro\meter\per pixel}, thus containing a volume of \SI{1.678e7}{voxels}) have been extracted for each of the protocols B, L and T. The three-dimensional placement of these ROIs inside the sample is shown in figure~\ref{fig:roi3d}. Each of the ROIs has been binarized using an algorithmically determined threshold~\cite{Otsu1979} and small particles inside the segmented airspace lumen have been removed using a connected components analysis. Subsequently, the euclidean distance transformation has been calculated for each thresholded ROI.
 
@@ -167,18 +188,15 @@ For comparison, the histogram of the euclidean distance transformation has been 
 	\label{fig:DTFplots}
 \end{figure}
 
-\section{Skeletonization}
+\subsection{Skeletonization}
 Extraction of Number of Nodes and Number of Edges - matching with volume-fraction to gain information about structural alteration during lung development
 
-\section{Multimodal Imaging}
-Proceeding has been published~\cite{Haberthuer2009} published $\rightarrow$ Sebastien Barré (Ex-Master-Student and now Ph.\,D.-Student) is working on it now. Sebastiens Masterthesis - Publication as a paper planned
-
 \section{Publications}\label{sec:publications}
-\subsection{WFS-Paper}
-Problem with corrections, holidays and new data. Delayed paper is in final editing stages, submission delayed because of multiple problems. Editing by JCS, MS and CH took long. ATS and leaving it for a month. First final draft rejected just before holidays, waiting for more data for $>$2 months.
+\subsection{Publication on the enhancement of the field of view of TOMCAT}
+The planned publication on the enhancement of the field of view of TOMAT has been delayed because of several problems. After a first version of the manuscript has been delayed because of multiple conferences and been set aside, a second version has been prepared for discussion with the co-authors. During this discussion we agreed on a slightly changed direction of the paper, which required waiting for new data from one of the co-authors. After two months we concluded that it's not possible to generate the new data the way we hoped. This data has now been generated differently and the manuscript is in the final editing stages ans should be submitted shortly.
 
-\subsection{Sausbier}
-Manuscript submitted for NatMed\cite{Sausbier2009b}
+\subsection{Publication on bone scans performed last year}
+Last year we made several tomographic scans of mice bones (tibia, femur and vertebrae) as part of a collaborative study. The manuscript which resulted from this collaboration has been submitted to Nature Medicine, details can be found in citation~\cite{Sausbier2009b}.
 
 \bibliographystyle{unsrtnat}
 \bibliography{../../references}
