--- a/img/edited-plot-roi2.tex
+++ b/img/edited-plot-roi2.tex
@@ -13,6 +13,8 @@ ymajorgrids,,
 xmin=0, xmax=0.0425,
 ymin=1, ymax=1e+007,
 %title={ROI 2},
+xlabel={Thickness [cm]},
+ylabel={Pixel Count},
 legend entries={%
 	B (ROI 2),%
 	L (ROI 2),%
