--- a/img/edited-plot-roi3.tex
+++ b/img/edited-plot-roi3.tex
@@ -13,6 +13,8 @@ ymajorgrids,
 xmin=0, xmax=0.0425,
 ymin=1, ymax=1e+007,
 %title={ROI 3},
+xlabel={Thickness [cm]},
+ylabel={Pixel Count},
 legend entries={%
 	B (ROI 3),%
 	L (ROI 3),%
